<resources>
    <string name="app_name">读书笔记</string>
    <string name="title_activity_login">登录</string>

    <!--login activity -->
    <string name="login">登录</string>
    <string name="zhuce">注册</string>
    <!-- zhuce Actiity-->
    <string name="userid">用户id</string>
    <!-- main  tab bar content-->
    <string name="maintab01">书籍分类管理</string>
    <string name="maintab02">书籍管理</string>
    <string name="maintab03">我的读书笔记</string>

    <!-- maintab 02  书籍管理 -->
    <string name="chaxun">查询</string>

    <!--maintab03 我的笔记-->
    <string name="addnote">添加笔记</string>

    <!-- 添加笔记  activity-->
    <string name="bookname">书籍名称</string>
    <string name="time">时间</string>
    <string name="content">内容</string>

    <!-- 添加书籍 activity-->
    <string name="bookid">编号</string>
    <string name="name">名称</string>
    <string name="author">作者</string>
    <string name="press">出版社</string>
    <string name="ISBN">ISBN</string>
    <string name="classify">书籍类名</string>
    <string name="addBook">添加书籍</string>
    <!--添加分类-->
    <string name="addClassify">添加分类</string>
    <!-- menu-->
    <string name="version">版本</string>
    <string name="huizong">汇总</string>
    <string name="tongji">统计</string>
</resources>
