<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.ice.test.ui.AddNoteActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookname"
        android:textSize="24sp"
        android:textAlignment="center" />
    <Spinner
        android:id="@+id/addNote_bookname"
        android:layout_width="match_parent"
        android:layout_height="50dp"></Spinner>
    <TextView
        android:text="@string/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center" />
    <EditText
        android:id="@+id/addNote_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/addNote_content" />
    <Button
        android:id="@+id/addNote_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addnote"
        android:onClick="addNoteClick"
        android:layout_gravity="center_vertical|center_horizontal|center"/>
</LinearLayout>
