<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/tabbar_main_maintab01"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:text="@string/maintab01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabbar_main_maintab02"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:text="@string/maintab02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabbar_main_maintab03"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:text="@string/maintab03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />
    </LinearLayout>


</LinearLayout>
